--- a/static/css/users/usertable.css
+++ b/static/css/users/usertable.css
@@ -13,7 +13,6 @@
 
 .user-table-body {
   height: 90%;
-  overflow: auto;
 }
 
 .user {
